# psutil-cygwin

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MODERNIZATION_COMPLETE.md  MODERN_INSTALLATION.md  PROJECT.md  README.md  TESTING.md  TEST_REORGANIZATION.md  comprehensive_test_runner.py  pyproject.toml  setup.py  test_021_fixes.py  test_fixes.py  test_import.py  verify_transparent_import.py
.github/workflows/: ci.yml  release.yml
claude/: README.md  pytest-advantages.md  pytest.ini  requirements-test.txt  run_mock_tests.sh
claude/issue-020/: final-resolution.md  resolution-strategy.md  test_020_mock_verification.py  test_execution.sh  test_fixes.py
claude/issue-021/: complete-resolution-verified.md  test_021_mock_verification.py  test_execution.sh  test_fixes.py
claude/issue-022/: resolution.md  test_022_mock_verification.py  test_023_verification.sh  test_024_verification.sh  test_execution.sh
dev/: ISSUE_009_RESOLUTION.md  ISSUE_010_RESOLUTION.md  ISSUE_011_RESOLUTION.md  ISSUE_012_RESOLUTION.md  ISSUE_013_RESOLUTION.md  ISSUE_015_RESOLUTION.md  ISSUE_017_RESOLUTION.md  ISSUE_018_RESOLUTION.md  ISSUE_019_RESOLUTION.md  MODERNIZATION_SUMMARY.md  README.md  USER_FIX_REVIEW.md  analyze_issue_012.py  analyze_issue_014.py  analyze_line_352.py  check_issue_011_fix.py  check_syntax.py  complete_fix.py  create_clean_test_file.py  debug_user_import.py  diagnose_issue_010.py  diagnose_issue_018.py  emergency_fix_014.py  find_method_with_finally.py  find_orphaned_finally.py  fix_import.sh  fix_import_issue.py  fix_issue_018.py  issue_006_fix_summary.py  issue_007_fix_summary.py  issue_008_fix_summary.py  minimal_test.py  quick_fix.sh  quick_syntax_check.py  quick_toml_test.py  scan_literal_newlines.py  test_issue_006_fixes.py  test_issue_007_fixes.py  test_issue_008_fixes.py  test_issue_009_fix.py  (+17 more)
docs/: Makefile  api.rst  compatibility.rst  conf.py  development.rst  examples.rst  index.rst  installation.rst  quickstart.rst  transparent_import.rst
issue/: architecture.txt  lose-enchanced.txt  new-tests-query.txt
issue/main/: 001.txt
issue/test/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020_resolution_test.sh  021.txt  021_RESOLUTION.md  021_resolution_test.sh  022.txt  023.txt  024.txt
psutil_cygwin/: __init__.py  core.py  cygwin_check.py  py.typed
psutil_cygwin/_build/: __init__.py  backend.py  hooks.py  setup_script.py
psutil_cygwin/examples/: __init__.py  process_manager.py  system_monitor.py
scripts/: add  down  install  pull  push  show  symlink  uninstall  up
tests/: __init__.py  test_integration.py  test_integration_comprehensive.py  test_psutil_cygwin.py  test_pth_comprehensive.py  test_pth_functionality.py  test_stress.py  test_unit.py  test_unit_comprehensive.py
